--- a/circle-playground.css
+++ b/circle-playground.css
@@ -21,39 +21,57 @@ html {
     font-family: sans-serif;
 }
 
-.close-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background-color: #111;
-    color: white;
-    border: none;
-    font-size: 16px;
-    cursor: pointer;
 
-    transition: all 0.2s ease;
+/* scrollbar */
+::-webkit-scrollbar {
+    width: 12px;
 }
 
-.close-btn:hover {
-    position: absolute;
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    transition: all 0.4s ease;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #696969;
+    transition: all 0.4s ease;
+
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+    transition: all 0.4s ease;
+}
+
+
+#menu-toggle {
+    position: fixed;
     top: 10px;
-    right: 10px;
+    left: 250px;
+    padding: 12px 18px;
     background-color: #111;
     color: white;
     border: none;
+    font-weight: bold;
     font-size: 16px;
     cursor: pointer;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
+
+    transition: 0.3s ease-in-out;
+}
+
+#menu-toggle:hover {
     transform: scale(1.1);
 
-    transition: all 0.2s ease;
+    transition: 0.3s ease-in-out;
 }
 
 #apply-btn {
-    position: absolute;
-    top: 10px;
-    left: 4px;
     padding: 8px;
-    margin-bottom: 20px;
+    padding-left: 90px;
+    padding-right: 90px;
+    margin-bottom: 35px;
+    font-weight: bold;
     background-color: #111;
     color: white;
     border: none;
@@ -65,17 +83,7 @@ html {
 }
 
 #apply-btn:hover {
-    position: absolute;
-    top: 10px;
-    left: 4px;
-    padding: 8px;
-    margin-bottom: 20px;
-    background-color: #292929;
-    color: white;
-    border: none;
-    font-size: 16px;
-    cursor: pointer;
-    border: 2px solid rgb(31, 31, 31);
+    background-color: #070505;
     transform: scale(1.05);
 
     transition: all 0.1s ease;
@@ -85,36 +93,6 @@ html {
     background-color: #424242;
 
     transition: all 0.1s ease;
-}
-
-#menu-toggle {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    background-color: #111;
-    color: white;
-    padding: 10px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-    opacity: 1;
-    transition: all 0.2s ease;
-}
-
-#menu-toggle:hover {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    background-color: #292929;
-    color: white;
-    padding: 10px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-    opacity: 1;
-    transition: all 0.2s ease;
-
-    transform: scale(1.1);
 }
 
 #menu-toggle.hidden {
@@ -141,6 +119,9 @@ body.cursor-hidden {
     padding-top: 20px;
     z-index: 1000;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
+
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 #slide-menu ul {
@@ -180,13 +161,30 @@ body.cursor-hidden {
 #info {
     bottom: 25px;
     left: 3px;
+    margin-top: 0px;
+    margin-left: 4px;
+    margin-right: 4px;
+}
+
+#info h3 {
+    margin-top: 0px;
+    margin-bottom: 10px;
+}
+
+#info h4 {
+    font-weight: bold;
+    font-size: 17px;
+    margin-top: 12px;
+    margin-bottom: 12px;
 }
 
 #info p {
     margin: 0px;
+    margin-top: 12px;
+    margin-bottom: 12px;
 }
 
-#info p a {
+#github_link {
     text-decoration: none;
     font-weight: bold;
     color: rgb(197, 197, 197);
